--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
  
     <h1>Ilja Achttienribbe</h1>
      <p>Ik ben Ilja Achttienribbe, ik ben 12 jaar oud en ik woon in Amsterdam. Ik zit op het Metis Montessori Lyceum. Ik zit in klas 1v3. Ik Speel voornamelijk games zoals GTA V, Descenders, MX Bikes en sams ook Ride 3. Ik hou ervan om te sporten en zit zelf op voetbal bij Asv De Dijk. Ik zit ook op Freerunnen. 's avonds op vrijdag kijk ik om 20:30 altijd Flikken Rotterdam.
-  
+  <div><script src="https://cdn.htmlgames.com/embed.js?game=Pinball&amp;bgcolor=white"></script></div>
   </body>
 </html>
